# aws-cost-spend-monitor

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test_main.py
.github/workflows/: cicd pipeline.yml  cicd-pipeline.yml
