[project]
name = "aws-spend-monitor"
version = "0.1.0"
description = "A FastAPI-based AWS spend monitoring application."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "fastapi[all,standard]>=0.115.8",
    "httpx>=0.28.1",
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pytest.ini_options]
pythonpath = "src"
addopts = "--maxfail=1 --disable-warnings -q"
